# action-test

./: .gitignore  Cargo.toml  Dockerfile  moon.yml
.github/workflows/: build.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile
apps/backend/src/: main.rs
apps/frontend/: package.json
apps/frontend/tests/: main.spec.ts
src/: main.rs
